# gotify-ntfy-bridge

./: Cargo.toml
src/: main.rs  req.rs
