[package]
name = "gotify-ntfy-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
maplit = "1.0.2"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
chrono = "0.4.31"
ntfy = "0.3.3"
url = "2.5.0"
